[dependencies]
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.0.2", features = ["json"] }

[package]
authors = ["seven communications GmbH & Co. KG <support@seven.io>"]
categories = ["api-bindings", "web-programming"]
description = "Official API client for the seven.io SMS Gateway."
edition = "2018"
homepage = "https://github.com/seven-io/rust"
keywords = ["cnam", "hlr", "mnp", "sms", "tts"]
license = "MIT"
name = "seven-client"
readme = "README.md"
repository = "https://github.com/seven-io/rust.git"
version = "0.3.0"
