[dependencies]
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
ureq = { version = "2.9.6", features = ["json"] }
strum = "0.26"
strum_macros = "0.26"

[package]
authors = ["seven communications GmbH & Co. KG <support@seven.io>"]
categories = ["api-bindings", "web-programming"]
description = "Official API client for seven.io."
edition = "2018"
homepage = "https://github.com/seven-io/rust-client"
keywords = ["cnam", "hlr", "mnp", "sms", "tts"]
license = "MIT"
name = "seven-client"
readme = "README.md"
repository = "https://github.com/seven-io/rust-client.git"
version = "0.5.0"
