[dependencies]
base64 = "0.22.0"

serde = { version = "1.0.197", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.114"
strum = "0.26"
strum_macros = "0.26"
ureq = { version = "2.9.6", features = ["json"] }

[dev-dependencies]
rand = "0.8.5"
regex = "1.10.4"

[package]
authors = ["seven communications GmbH & Co. KG <support@seven.io>"]
categories = ["api-bindings", "web-programming"]
description = "Official API client for seven.io."
edition = "2018"
keywords = ["cnam", "hlr", "mnp", "sms", "tts"]
license = "MIT"
name = "seven-client"
readme = "README.md"
repository = "https://github.com/seven-io/rust-client"
rust-version = "1.57"
version = "0.5.0"
